# os-course

./: .gitignore  CMakeLists.txt  LICENSE  main.c
include/: encoding.h  memory.h  parser.h  utils.h
src/: encoding.c  memory.c  parser.c  utils.c
tests/: text.txt
